--- a/client/index.html
+++ b/client/index.html
@@ -53,7 +53,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -386,18 +386,18 @@
     eventTwo1.addEventListener("click", function () {
       fbq('trackCustom', 'Index Page Get Early Access Button Click', { eventID: '2' });
     });
-    var eventTwo2 = document.getElementById("eventTwo2");
+    /*var eventTwo2 = document.getElementById("eventTwo2");
     eventTwo2.addEventListener("click", function () {
       fbq('trackCustom', 'Index Page Get Early Access Button Click', { eventID: '2' });
-    });
+    });*/
     var eventThree1 = document.getElementById('eventThree1');
     eventThree1.addEventListener('submit', function () {
       fbq('trackCustom', 'Index Page Submit Button Click', { eventID: '3' });
     });
-    var eventThree2 = document.getElementById('eventThree2');
+    /*var eventThree2 = document.getElementById('eventThree2');
     eventThree2.addEventListener('submit', function () {
       fbq('trackCustom', 'Index Page Submit Button Click', { eventID: '3' });
-    });
+    });*/
   </script>
   <script>
     //Server Side Tracking Function
@@ -418,18 +418,18 @@
     eventTwo1.addEventListener("click", function () {
       serverSideTracking("Index Page Get Early Access Button Click", window.location.href, "2")
     });
-    var eventTwo2 = document.getElementById("eventTwo2");
+    /*var eventTwo2 = document.getElementById("eventTwo2");
     eventTwo2.addEventListener("click", function () {
       serverSideTracking("Index Page Get Early Access Button Click", window.location.href, "2")
-    });
+    });*/
     var eventThree1 = document.getElementById("eventThree1");
     eventThree1.addEventListener("submit", function () {
       serverSideTracking("Index Page Submit Button Click", window.location.href, "3")
     });
-    var eventThree2 = document.getElementById("eventThree2");
+    /*var eventThree2 = document.getElementById("eventThree2");
     eventThree2.addEventListener("submit", function () {
       serverSideTracking("Index Page Submit Button Click", window.location.href, "3")
-    });       
+    });*/
   </script>
 </body>
 
