Fix the early access page events issues

--- a/client/early-access.html
+++ b/client/early-access.html
@@ -41,7 +41,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -78,7 +78,8 @@
             <div class="text-block-copy">Want <span class="text-span-4">Early Access</span></div>
             <div class="text-block-2-copy">By making a $100 deposit you will get early access to our beta product and be
               invited to a private Facebook group to collaborate directly with the founders</div>
-            <a data-w-id="b213ff1a-8396-53d0-dea4-4385c7e53b3e" href="#" class="button-copy w-button">Get Early
+            <a id="eventFive" data-w-id="b213ff1a-8396-53d0-dea4-4385c7e53b3e" href="#" class="button-copy w-button">Get
+              Early
               Access</a>
           </div>
           <div class="div-block-486"><img src="images/Group-ea.svg" loading="lazy" alt="" class="image-7"></div>
