Pushing out fixes

--- a/client/early-access.html
+++ b/client/early-access.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Oct 11 2022 06:45:09 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 11 2022 16:08:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6343da6ea0e6934a6a3756ab" data-wf-site="62a1a68347d84370532e079a">
 
 <head>
@@ -41,7 +41,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -79,8 +79,7 @@
             <div class="text-block-2-copy">By making a $100 deposit you will get early access to our beta product and be
               invited to a private Facebook group to collaborate directly with the founders</div>
             <a id="eventFive" data-w-id="b213ff1a-8396-53d0-dea4-4385c7e53b3e" href="#" class="button-copy w-button">Get
-              Early
-              Access</a>
+              Early Access</a>
           </div>
           <div class="div-block-486"><img src="images/Group-ea.svg" loading="lazy" alt="" class="image-7"></div>
         </div>
@@ -248,7 +247,7 @@
     });      
   </script>
   <script>
-    var stripe = Stripe('pk_test_51LrczDH1N244HbHM4Wr1QUMuZoq45wL6jZRJgkVqmhA6wtEqngoNajZR1ZLGLTZGZ8hlIyqurTDGY1hpPUtM5ydM006YlJd2Lf');
+    var stripe = Stripe('');
     var elements = stripe.elements();
     // Custom styling can be passed to options when creating an Element.
     var style = {
