--- a/client/thank-you-early-access.html
+++ b/client/thank-you-early-access.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Oct 11 2022 06:45:09 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 11 2022 16:08:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="633fddf028f7af7aff562fb3" data-wf-site="62a1a68347d84370532e079a">
+
 <head>
   <meta charset="utf-8">
   <title>Handoff - Thank You For Your Deposit</title>
-  <meta content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you." name="description">
+  <meta
+    content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you."
+    name="description">
   <meta content="Handoff - Join Our Private Facebook Group Today" property="og:title">
-  <meta content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/62a1a68347d84370532e079a/63450efae449f9136996afe9_Thank%20you%20page.png" property="og:image">
+  <meta
+    content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you."
+    property="og:description">
+  <meta
+    content="https://uploads-ssl.webflow.com/62a1a68347d84370532e079a/63450efae449f9136996afe9_Thank%20you%20page.png"
+    property="og:image">
   <meta content="Handoff - Join Our Private Facebook Group Today" property="twitter:title">
-  <meta content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/62a1a68347d84370532e079a/63450efae449f9136996afe9_Thank%20you%20page.png" property="twitter:image">
+  <meta
+    content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you."
+    property="twitter:description">
+  <meta
+    content="https://uploads-ssl.webflow.com/62a1a68347d84370532e079a/63450efae449f9136996afe9_Thank%20you%20page.png"
+    property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -19,33 +30,42 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/handoff-387898.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Poppins:100,200,300,regular,500,600,700,800,900","Inter:100,200,300,regular,500,600,700,800,900","Manrope:200,300,regular,500,600,700,800","Zilla Slab:300,regular,500,600,700","Roboto:100,300,regular,500,700,900","Raleway:100,200,300,regular,500,600,700,800,900","Mulish:regular,500,600,700,800,900","Rubik:regular,500,600,700,800,900"]  }});</script>
+  <script
+    type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Poppins:100,200,300,regular,500,600,700,800,900", "Inter:100,200,300,regular,500,600,700,800,900", "Manrope:200,300,regular,500,600,700,800", "Zilla Slab:300,regular,500,600,700", "Roboto:100,300,regular,500,700,900", "Raleway:100,200,300,regular,500,600,700,800,900", "Mulish:regular,500,600,700,800,900", "Rubik:regular,500,600,700,800,900"] } });</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon"><!--  Meta Pixel Code  -->
   <script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '567729321820683');
-fbq('track', 'PageView');
-fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
-</script>
-  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=567729321820683&ev=PageView&noscript=1"></noscript>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '567729321820683');
+    fbq('track', 'PageView');
+    fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=567729321820683&ev=PageView&noscript=1"></noscript>
   <!--  End Meta Pixel Code  -->
 </head>
+
 <body class="body-4">
   <div>
-    <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-4 w-nav">
+    <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
+      role="banner" class="navbar-4 w-nav">
       <div class="container-5 w-container">
         <div class="div-block-488">
-          <a href="index.html" class="w-nav-brand"><img src="images/handoff-blue.svg" loading="lazy" alt="" class="image-8"></a>
+          <a href="index.html" class="w-nav-brand"><img src="images/handoff-blue.svg" loading="lazy" alt=""
+              class="image-8"></a>
           <nav role="navigation" class="nav-menu w-nav-menu"></nav>
         </div>
       </div>
@@ -55,8 +75,10 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
         <div class="div-block-2-aaa">
           <div class="div-block-481">
             <div class="text-block-copy">Thank You For<br>‍<span class="text-span-4">Your Deposit</span></div>
-            <div class="text-block-2-copy">By making a $100 deposit you will get early access to our beta product and be invited to a private Facebook group to collaborate directly with the founders</div>
-            <a id="eventEight" data-w-id="b213ff1a-8396-53d0-dea4-4385c7e53b3e" href="#" class="button-copy w-button">Join Private Facebook Group</a>
+            <div class="text-block-2-copy">By making a $100 deposit you will get early access to our beta product and be
+              invited to a private Facebook group to collaborate directly with the founders</div>
+            <a id="eventEight" data-w-id="b213ff1a-8396-53d0-dea4-4385c7e53b3e" href="#"
+              class="button-copy w-button">Join Private Facebook Group</a>
           </div>
           <div class="div-block-486"><img src="images/thnk.svg" loading="lazy" alt="" class="image-7"></div>
         </div>
@@ -72,50 +94,6 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
               <div><img src="images/Adobe_XD-Logo-1.svg" loading="lazy" alt="" class="image"></div>
               <div><img src="images/Group-1505.svg" loading="lazy" alt="" class="image"></div>
               <div><img src="images/Canva-New-Logo-1.svg" loading="lazy" alt="" class="image"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="early-access-popup">
-      <div class="div-block-474">
-        <div class="div-block-483">
-          <a href="#" class="w-inline-block"><img src="images/carbon_close.svg" loading="lazy" data-w-id="b213ff1a-8396-53d0-dea4-4385c7e53b73" alt=""></a>
-        </div>
-        <div class="div-block-477 abc">
-          <div class="div-block-482 abc">
-            <div class="text-block-112">Payment Information</div>
-            <div class="form-block-13 w-form">
-              <form id="email-form" name="email-form" data-name="Email Form" method="get"><label for="name" class="field-label-25">Name*</label><input type="text" class="text-field-11 w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your full name" id="name" required=""><label for="email" class="field-label-25">Email Address*</label><input type="email" class="text-field-11 w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email address" id="email" required=""><label for="email-2" class="field-label-25">Card Details*</label>
-                <div class="div-block-303">
-                  <div class="div-block-484"><img src="images/Group-342.svg" loading="lazy" alt="" class="image-14"><input type="text" class="text-field-10 w-input" maxlength="256" name="Card-Number" data-name="Card Number" placeholder="0000 0000 0000 0000" id="Card-Number" required=""></div>
-                  <div class="div-block-484"><input type="text" class="text-field-10 right mmyy w-input" maxlength="256" name="field" data-name="Field" placeholder="MM/YY" id="field" required=""><input type="text" class="text-field-10 right cvv w-input" maxlength="256" name="CVV" data-name="CVV" placeholder="CVV" id="CVV" required=""><input type="text" class="text-field-10 right w-input" maxlength="256" name="ZIP-Code" data-name="ZIP Code" placeholder="ZIP Code" id="ZIP-Code" required=""></div>
-                </div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button-7 w-button">
-              </form>
-              <div class="w-form-done">
-                <div>Thank you! Your submission has been received!</div>
-              </div>
-              <div class="w-form-fail">
-                <div>Oops! Something went wrong while submitting the form.</div>
-              </div>
-            </div>
-          </div>
-          <div class="div-block-482 _2 _43">
-            <div class="text-block-116">You have to pay</div>
-            <div class="text-block-115">$100</div>
-            <div class="div-block-485"></div>
-            <div class="text-block-117">What’s included</div>
-            <div class="div-block-476"><img src="images/Ellipse-2.svg" loading="lazy" alt="" class="image-14">
-              <div class="text-block-113">First access to our beta product</div>
-            </div>
-            <div class="div-block-476"><img src="images/Ellipse-2.svg" loading="lazy" alt="" class="image-14">
-              <div class="text-block-113">Invite to our private Facebook group</div>
-            </div>
-            <div class="div-block-476"><img src="images/Ellipse-2.svg" loading="lazy" alt="" class="image-14">
-              <div class="text-block-113">Get real time updates on the projects progress</div>
-            </div>
-            <div class="div-block-476"><img src="images/Ellipse-2.svg" loading="lazy" alt="" class="image-14">
-              <div class="text-block-113">Collaborate directly with the cofounders</div>
             </div>
           </div>
         </div>
@@ -138,16 +116,20 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
           </div>
           <div class="column-3">
             <h1 class="heading-5">Follow Us</h1>
-            <a href="#" class="link-block w-inline-block"><img src="images/feather_facebook.svg" loading="lazy" alt="" class="image-59">
+            <a href="#" class="link-block w-inline-block"><img src="images/feather_facebook.svg" loading="lazy" alt=""
+                class="image-59">
               <div class="text-block-42">fb.com/handoff</div>
             </a>
-            <a href="#" class="link-block w-inline-block"><img src="images/feather_instagram.svg" loading="lazy" alt="" class="image-59">
+            <a href="#" class="link-block w-inline-block"><img src="images/feather_instagram.svg" loading="lazy" alt=""
+                class="image-59">
               <div class="text-block-42">@/handoff</div>
             </a>
-            <a href="#" class="link-block w-inline-block"><img src="images/feather_twitter.svg" loading="lazy" alt="" class="image-59">
+            <a href="#" class="link-block w-inline-block"><img src="images/feather_twitter.svg" loading="lazy" alt=""
+                class="image-59">
               <div class="text-block-42">@/handoff</div>
             </a>
-            <a href="#" class="link-block w-inline-block"><img src="images/feather_dribbble.svg" loading="lazy" alt="" class="image-59">
+            <a href="#" class="link-block w-inline-block"><img src="images/feather_dribbble.svg" loading="lazy" alt=""
+                class="image-59">
               <div class="text-block-42">Dribbble.com/handoff</div>
             </a>
           </div>
@@ -155,7 +137,10 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
             <h1 class="heading-5">Get in touch with us</h1>
             <div class="div-block-25">
               <div class="w-form">
-                <form id="email-form" name="email-form" data-name="Email Form" method="get"><label for="Email" class="field-label">Need Answers? Need help ? Just email us</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Your Email" id="Email"></form>
+                <form id="email-form" name="email-form" data-name="Email Form" method="get"><label for="Email"
+                    class="field-label">Need Answers? Need help ? Just email us</label><input type="email"
+                    class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Your Email"
+                    id="Email"></form>
                 <div class="w-form-done">
                   <div>Thank you! Your submission has been received!</div>
                 </div>
@@ -169,34 +154,37 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62a1a68347d84370532e079a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62a1a68347d84370532e079a"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script>
-  var eventEight = document.getElementById("eventEight");
-  eventEight.addEventListener("click", function () {
-    fbq('trackCustom', 'Thank You Page Join Private Facebook Group Button Click', { eventID: '8' })
-  });
-</script>
+    var eventEight = document.getElementById("eventEight");
+    eventEight.addEventListener("click", function () {
+      fbq('trackCustom', 'Thank You Page Join Private Facebook Group Button Click', { eventID: '8' })
+    });
+  </script>
   <script>
-  //Server Side Tracking Function
-  function serverSideTracking(eventName, eventUrl, eventId) {
-    fetch('/server-side-tracking', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        eventName: eventName,
-        eventUrl: eventUrl,
-        eventId: eventId
+    //Server Side Tracking Function
+    function serverSideTracking(eventName, eventUrl, eventId) {
+      fetch('/server-side-tracking', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          eventName: eventName,
+          eventUrl: eventUrl,
+          eventId: eventId
+        })
       })
-    })
-  }
-  //Index Page Events
-  window.onload = serverSideTracking("Thank You Page View", window.location.href, "7");
-  var eventEight = document.getElementById("eventEight");
-  eventEight.addEventListener("click", function () {
-    serverSideTracking("Thank You Page Join Private Facebook Group Button Click", window.location.href, "8")
-  });    
-</script>
+    }
+    //Index Page Events
+    window.onload = serverSideTracking("Thank You Page View", window.location.href, "7");
+    var eventEight = document.getElementById("eventEight");
+    eventEight.addEventListener("click", function () {
+      serverSideTracking("Thank You Page Join Private Facebook Group Button Click", window.location.href, "8")
+    });    
+  </script>
 </body>
+
 </html>
