--- a/client/thank-you-early-access.html
+++ b/client/thank-you-early-access.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
 <!--  Last Published: Fri Oct 28 2022 00:57:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="633fddf028f7af7aff562fb3" data-wf-site="62a1a68347d84370532e079a">
+
 <head>
   <meta charset="utf-8">
   <title>Handoff - Thank You For Your Deposit</title>
-  <meta content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you." name="description">
+  <meta
+    content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you."
+    name="description">
   <meta content="Handoff - Join Our Private Facebook Group Today" property="og:title">
-  <meta content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/62a1a68347d84370532e079a/63450efae449f9136996afe9_Thank%20you%20page.png" property="og:image">
+  <meta
+    content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you."
+    property="og:description">
+  <meta
+    content="https://uploads-ssl.webflow.com/62a1a68347d84370532e079a/63450efae449f9136996afe9_Thank%20you%20page.png"
+    property="og:image">
   <meta content="Handoff - Join Our Private Facebook Group Today" property="twitter:title">
-  <meta content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/62a1a68347d84370532e079a/63450efae449f9136996afe9_Thank%20you%20page.png" property="twitter:image">
+  <meta
+    content="Please use the link on the page to request access to our private Facebook group. We look forward to collaborating with you."
+    property="twitter:description">
+  <meta
+    content="https://uploads-ssl.webflow.com/62a1a68347d84370532e079a/63450efae449f9136996afe9_Thank%20you%20page.png"
+    property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -19,33 +30,42 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/handoff-387898.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Poppins:100,200,300,regular,500,600,700,800,900","Inter:100,200,300,regular,500,600,700,800,900","Manrope:200,300,regular,500,600,700,800","Zilla Slab:300,regular,500,600,700","Roboto:100,300,regular,500,700,900","Raleway:100,200,300,regular,500,600,700,800,900","Mulish:regular,500,600,700,800,900","Rubik:regular,500,600,700,800,900"]  }});</script>
+  <script
+    type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Poppins:100,200,300,regular,500,600,700,800,900", "Inter:100,200,300,regular,500,600,700,800,900", "Manrope:200,300,regular,500,600,700,800", "Zilla Slab:300,regular,500,600,700", "Roboto:100,300,regular,500,700,900", "Raleway:100,200,300,regular,500,600,700,800,900", "Mulish:regular,500,600,700,800,900", "Rubik:regular,500,600,700,800,900"] } });</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon"><!--  Meta Pixel Code  -->
   <script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '567729321820683');
-fbq('track', 'PageView');
-fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
-</script>
-  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=567729321820683&ev=PageView&noscript=1"></noscript>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '567729321820683');
+    fbq('track', 'PageView');
+    fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=567729321820683&ev=PageView&noscript=1"></noscript>
   <!--  End Meta Pixel Code  -->
 </head>
+
 <body class="body-4">
   <div>
-    <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-4 w-nav">
+    <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
+      role="banner" class="navbar-4 w-nav">
       <div class="container-5 w-container">
         <div class="div-block-488">
-          <a href="old-home.html" class="w-nav-brand"><img src="images/handoff-blue.svg" loading="lazy" alt="" class="image-8"></a>
+          <a href="old-home.html" class="w-nav-brand"><img src="images/handoff-blue.svg" loading="lazy" alt=""
+              class="image-8"></a>
           <nav role="navigation" class="nav-menu w-nav-menu"></nav>
         </div>
       </div>
@@ -55,8 +75,10 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
         <div class="div-block-2-aaa">
           <div class="div-block-481">
             <div class="text-block-copy">Thank You For<br>‍<span class="text-span-4">Your Deposit</span></div>
-            <div class="text-block-2-copy">By making a $100 deposit you will get early access to our beta product and be invited to a private Facebook group to collaborate directly with the founders</div>
-            <a id="eventEight" data-w-id="b213ff1a-8396-53d0-dea4-4385c7e53b3e" href="#" class="button-copy w-button">Join Private Facebook Group</a>
+            <div class="text-block-2-copy">By making a $100 deposit you will get early access to our beta product and be
+              invited to a private Facebook group to collaborate directly with the founders</div>
+            <a id="eventEight" data-w-id="b213ff1a-8396-53d0-dea4-4385c7e53b3e" href="#"
+              class="button-copy w-button">Join Private Facebook Group</a>
           </div>
           <div class="div-block-486"><img src="images/thnk.svg" loading="lazy" alt="" class="image-7"></div>
         </div>
@@ -94,16 +116,20 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
           </div>
           <div class="column-3">
             <h1 class="heading-5">Follow Us</h1>
-            <a href="#" class="link-block w-inline-block"><img src="images/feather_facebook.svg" loading="lazy" alt="" class="image-59">
+            <a href="#" class="link-block w-inline-block"><img src="images/feather_facebook.svg" loading="lazy" alt=""
+                class="image-59">
               <div class="text-block-42">fb.com/handoff</div>
             </a>
-            <a href="#" class="link-block w-inline-block"><img src="images/feather_instagram.svg" loading="lazy" alt="" class="image-59">
+            <a href="#" class="link-block w-inline-block"><img src="images/feather_instagram.svg" loading="lazy" alt=""
+                class="image-59">
               <div class="text-block-42">@/handoff</div>
             </a>
-            <a href="#" class="link-block w-inline-block"><img src="images/feather_twitter.svg" loading="lazy" alt="" class="image-59">
+            <a href="#" class="link-block w-inline-block"><img src="images/feather_twitter.svg" loading="lazy" alt=""
+                class="image-59">
               <div class="text-block-42">@/handoff</div>
             </a>
-            <a href="#" class="link-block w-inline-block"><img src="images/feather_dribbble.svg" loading="lazy" alt="" class="image-59">
+            <a href="#" class="link-block w-inline-block"><img src="images/feather_dribbble.svg" loading="lazy" alt=""
+                class="image-59">
               <div class="text-block-42">Dribbble.com/handoff</div>
             </a>
           </div>
@@ -111,7 +137,10 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
             <h1 class="heading-5">Get in touch with us</h1>
             <div class="div-block-25">
               <div class="w-form">
-                <form id="email-form" name="email-form" data-name="Email Form" method="get"><label for="Email" class="field-label">Need Answers? Need help ? Just email us</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Your Email" id="Email"></form>
+                <form id="email-form" name="email-form" data-name="Email Form" method="get"><label for="Email"
+                    class="field-label">Need Answers? Need help ? Just email us</label><input type="email"
+                    class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Your Email"
+                    id="Email"></form>
                 <div class="w-form-done">
                   <div>Thank you! Your submission has been received!</div>
                 </div>
@@ -125,34 +154,37 @@ fbq('trackCustom', 'Thank You Page View', { eventID: '7' });
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62a1a68347d84370532e079a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62a1a68347d84370532e079a"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script>
-  //Server Side Tracking Function
-  async function serverSideTracking(eventName, eventUrl, eventId) {
-    await axios
-      .post(
-      "/server-side-tracking",
-      {
-        eventName: eventName,
-        eventUrl: eventUrl,
-        eventId: eventId
-      }
-    )
-      .then((response) => {
-      console.log("Success: " + response.data);
-    })
-      .catch((err) => console.log("Failed: " + err));
-  }
-  //Index Page Events
-  window.onload = serverSideTracking("Thank You Page View", window.location.href, "7");
-  var eventEight = document.getElementById("eventEight");
-  eventEight.addEventListener("click", function () {
-    serverSideTracking("Thank You Page Join Private Facebook Group Button Click", window.location.href, "8");
-    fbq('trackCustom', 'Thank You Page Join Private Facebook Group Button Click', { eventID: '8' });
-  });    
-</script>
+    //Server Side Tracking Function
+    async function serverSideTracking(eventName, eventUrl, eventId) {
+      await axios
+        .post(
+          "/server-side-tracking",
+          {
+            eventName: eventName,
+            eventUrl: eventUrl,
+            eventId: eventId
+          }
+        )
+        .then((response) => {
+          console.log("Success: " + response.data);
+        })
+        .catch((err) => console.log("Failed: " + err));
+    }
+    //Index Page Events
+    window.onload = serverSideTracking("Thank You Page View", window.location.href, "7");
+    var eventEight = document.getElementById("eventEight");
+    eventEight.addEventListener("click", function () {
+      serverSideTracking("Thank You Page Join Private Facebook Group Button Click", window.location.href, "8");
+      fbq('trackCustom', 'Thank You Page Join Private Facebook Group Button Click', { eventID: '8' });
+    });    
+  </script>
 </body>
+
 </html>
